Refactor VoteRestControllerTest