@@ -4,20 +4,23 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.security.test.context.support.WithUserDetails;
 import org.springframework.test.web.servlet.MockMvc;
 import ru.dsoccer1980.model.Restaurant;
+import ru.dsoccer1980.model.Role;
 import ru.dsoccer1980.model.User;
 import ru.dsoccer1980.model.Vote;
 import ru.dsoccer1980.repository.UserRepository;
 import ru.dsoccer1980.service.VoteService;
+import ru.dsoccer1980.util.config.InitProps;
 
+import javax.annotation.PostConstruct;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.mockito.BDDMockito.given;
@@ -26,13 +29,15 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest({VoteRestController.class})
-@MockBean(UserRepository.class)
 class VoteRestControllerTest extends AbstractControllerTest {
 
     private final LocalDateTime registeredTime = LocalDateTime.of(2019, 7, 31, 0, 0, 0);
     private final LocalDate VOTE_DATE1 = LocalDate.of(2019, 7, 24);
-    private final User USER1 = new User(1L, "Ivanov", "ivan@gmail.com", "password", registeredTime, Collections.emptySet());
-    private final Restaurant RESTAURANT1 = new Restaurant(10L, "TSAR", "Nevskij 53", USER1);
+    private final Role ROLE_COMPANY = new Role(40L, InitProps.ROLE_COMPANY);
+    private final Role ROLE_USER = new Role(41L, InitProps.ROLE_USER);
+    private final User USER1 = new User(1L, "Ivanov", "ivan@gmail.com", "password", registeredTime, Set.of(ROLE_USER));
+    private final User COMPANY = new User(1L, "Ivanov", "ivan@gmail.com", "password", registeredTime, Set.of(ROLE_COMPANY));
+    private final Restaurant RESTAURANT1 = new Restaurant(10L, "TSAR", "Nevskij 53", COMPANY);
     private final Vote VOTE1 = new Vote(30L, USER1, RESTAURANT1, VOTE_DATE1);
 
     @MockBean
@@ -41,10 +46,20 @@ class VoteRestControllerTest extends AbstractControllerTest {
     @Autowired
     private MockMvc mvc;
 
+    @MockBean
+    private UserRepository userRepository;
+
+
+    @PostConstruct
+    void postConstruct() {
+        given(userRepository.findByName("company")).willReturn(Optional.of(COMPANY));
+        given(userRepository.findByName("user")).willReturn(Optional.of(USER1));
+    }
+
     @Test
-    @WithMockUser(username = "user", authorities = {"ROLE_USER"})
+    @WithUserDetails(value = "user")
     void createVote() throws Exception {
-        given(voteService.save(-1L, 10L, LocalDate.of(2019, 8, 8))).willReturn(VOTE1);
+        given(voteService.save(USER1.getId(), 10L, LocalDate.of(2019, 8, 8))).willReturn(VOTE1);
 
         mvc.perform(post("/user/vote/restaurant/10/date/2019-08-08"))
                 .andExpect(status().isOk())
@@ -52,9 +67,9 @@ class VoteRestControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    @WithMockUser(username = "user", authorities = {"ROLE_USER"})
+    @WithUserDetails(value = "user")
     void getAllVotesByUser() throws Exception {
-        given(voteService.getVotesByUser(-1L)).willReturn(List.of(VOTE1));
+        given(voteService.getVotesByUser(USER1.getId())).willReturn(List.of(VOTE1));
 
         mvc.perform(get("/user/vote"))
                 .andExpect(status().isOk())
@@ -62,9 +77,9 @@ class VoteRestControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    @WithMockUser(username = "user", authorities = {"ROLE_USER"})
+    @WithUserDetails(value = "user")
     void getRestaurantIdVotedUserByDate() throws Exception {
-        given(voteService.getByUserIdAndDate(-1L, LocalDate.of(2019, 8, 8))).willReturn(Optional.of(VOTE1));
+        given(voteService.getByUserIdAndDate(USER1.getId(), LocalDate.of(2019, 8, 8))).willReturn(Optional.of(VOTE1));
 
         mvc.perform(get("/user/vote/date/2019-08-08"))
                 .andExpect(status().isOk())
@@ -72,9 +87,9 @@ class VoteRestControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    @WithMockUser(username = "user", authorities = {"ROLE_USER"})
+    @WithUserDetails(value = "user")
     void getRestaurantIdVotedUserByDateWithEmptyResult() throws Exception {
-        given(voteService.getByUserIdAndDate(-1L, LocalDate.of(2019, 8, 8))).willReturn(Optional.empty());
+        given(voteService.getByUserIdAndDate(USER1.getId(), LocalDate.of(2019, 8, 8))).willReturn(Optional.empty());
 
         mvc.perform(get("/user/vote/date/2019-08-08"))
                 .andExpect(status().isOk())
@@ -100,9 +115,9 @@ class VoteRestControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    @WithMockUser(username = "user", authorities = {"ROLE_USER"})
+    @WithUserDetails(value = "user")
     void deleteVote() throws Exception {
-        given(voteService.delete(-1L, LocalDate.now())).willReturn(true);
+        given(voteService.delete(USER1.getId(), LocalDate.now())).willReturn(true);
 
         mvc.perform(delete("/user/vote"))
                 .andExpect(status().isOk())
